--- a/app/templates/chat.html
+++ b/app/templates/chat.html
@@ -17,7 +17,9 @@
     </script>
     <link rel="stylesheet"
         href="{{ url_for('static', filename='js/highlight/styles/atom-one-dark-reasonable.css') }}">
-    <script type="text/javascript" charset="utf-8">
+    <script type="text/javascript" charset="utf-8"
+        src="{{ url_for('static', filename='js/highlight/highlight.pack.js') }}"
+        <script type="text/javascript" charset="utf-8">
         hljs.initHighlightingOnLoad();
     </script>
     <script type="text/javascript" charset="utf-8">
